# Set this option to the path of TwinCATs TcAdsDll header files, if you want
# to build TcAdsLib, which can be used on systems with TwinCAT router available
# to use the native TwinCAT routing.
# On Windows 10 the default path is:
# 'c:\TwinCAT\AdsApi\TcAdsDll\Include'
# On TC/BSD the default path is:
# '/usr/local/include'
option('tcadsdll_include', type: 'string', value: '')

# Set this option to the path of TwinCATs TcAdsDll library files, if you want
# to build TcAdsLib, which can be used on systems with TwinCAT router available
# to use the native TwinCAT routing.
# On Windows 10 the default path is:
# 'c:\TwinCAT\AdsApi\TcAdsDll\x64\lib'
# On TC/BSD the default path is:
# '/usr/local/lib'
option('tcadsdll_lib', type: 'string', value: '')

# Set this option to configure the default loglevel.
option('default_loglevel', type: 'string', value: '-DCONFIG_DEFAULT_LOGLEVEL=1')
