# Set this option to the path of TwinCATs TcAdsDll static library on systems,
# with TwinCAT router available, if you want to use the native TwinCAT routing.
# On Windows 10 the default path is:
# 'c:\TwinCAT\AdsApi\TcAdsDll\x64\lib'
# On TC/BSD the default path is:
# '/usr/local/lib'
option('tcadsdll_lib', type: 'string', value: '')

# Set this option to the path of TwinCATs TcAdsDll header files on systems,
# with TwinCAT router available, if you want to use the native TwinCAT routing.
# On Windows 10 the default path is:
# 'c:\TwinCAT\AdsApi\TcAdsDll\Include'
# On TC/BSD the default path is:
# '/usr/local/include'
option('tcadsdll_include', type: 'string', value: '')
